Fix tag spacing in post info block, set overflow-y on code blocks

--- a/_sass/termina-plex/pages/single.scss
+++ b/_sass/termina-plex/pages/single.scss
@@ -43,6 +43,7 @@ dt::after {
   background-color: var(--header-background-color);
   margin: 0;
   padding: $spacingUnit * 0.6667;
+  overflow-y: scroll;
 }
 
 .pageNavFooter {
